# local_ml_weather_postprocessing

./: .gitignore  .output-39008858.txt.swp  =2024.1.0  AI_ASSISTANT_QUICK_REFERENCE.md  ALTERNATIVE_MODEL_EXPLORATION.md  ARCHITECTURE_EXPERIMENTS_README.md  ARCHITECTURE_EXPERIMENTS_README_V2.md  BINNED_PLOT_DOCUMENTATION.md  BRANCH_SUMMARY.md  CLAUDE.md  CONTINENT_PATCHES_USAGE.md  CRITICAL_HYPEROPT_FIX.md  CYCLIC_POINT_FIX.md  DATA_LOADING_FLAGS_README.md  DRAFT_IMPROVEMENT.md  GLOBAL_MAP_USAGE.md  GPU_CLUSTER_SETUP.md  HYPERPARAMETER_TUNING_OPTIMIZATION.md  LEGACY_DATA_LOADING_README.md  PIXEL_SMEARING_FIX_ANALYSIS.md  README.md  REPOSITORY_STRUCTURE_ANALYSIS.md  UPDATED_FEATURES_SUMMARY.md  WeatherNext_2_Starter_Guide_Zarr_on_Google_Cloud_Storage.ipynb  Weatherbench2_Evaluation.ipynb  ai_weather_models_download_job.sh  aifs_cleaning.py  analyze_architecture_results.py  combine_forecasts.py  compare_forecasts.py  create_aurora_forecasts.py  diagnose_smearing.py  download_forecasts.py  download_ifs_forecast.py  eda_slides.typ  eval_test.py  evaluate.py  example_plot_improvement_by_bin.py  fine_tune_neuralGCM_decoder.py  fine_tune_neuralGCM_decoder.qmd  (+83 more)
aurora/: clean_forecasts.py  create_aurora_forecasts.sh  download_aurora.py  prepare_aurora_data.py  run_aurora.py
download_ndfd/: README.html  README.md  pull_ndfd.py
downloading_data/: aifs_cleaning.py  combine_aifs.py  download_aifs.sh  download_forecasts.py  download_targets.py  test_download_aifs.sh
finetuning/: 0.5_download_climate_patches.py  0.5_sample_climate_zones.py  0_clean_and_sample_climate_zones.py  0_clean_climate_zones.py  0_download_data.py  1_finetune.py  1_run_experiments.sh  2_finetune_evalutation.py  CONTINENTAL_PATCHES_README.md  README_DYNAMIC_DATA_LOADING.md  appendix_model_selection.md  architecture_experiments_notes.md  clean_and_sample_climate_zones.py  create_continental_patches.py  create_global_maps.py  create_maps_and_binscatters.py  custom_loss_fns.py  download_data.py  download_data_ifs.py  download_data_pangu.py  download_era5.py  download_forecasts.py  download_pangu.py  download_targets.py  erl_figures.py  figures_finetuning.py  finetune.py  finetune_evalutation.py  finetune_job_anvil.sh  finetune_job_local.sh  finetune_wbx_try.py  hyperparam_tuning.py  hyperparam_tuning.sh  old_finetune.py  old_finetune_eval.py  old_finetune_job_local.sh  output-38793076.txt  plot_arch_experiment_results.py  plot_custom_loss.py  plot_maps_and_binscatters.py  (+15 more)
gee_gencast/: gee_eda.qmd
heat_wave/: heat_wave_training_subset.py  preprocess_temp_forecast.py  run_heatwave_experiment.py  run_heatwave_experiment.sh
hyperopt_results/: eval_20250717_112524.json  eval_20250717_112705.json  eval_20250717_113410.json  eval_20250718_181233.json  eval_20250718_181309.json  eval_20250718_181326.json  eval_20250718_181352.json  eval_20250718_181646.json  eval_20250718_181928.json  eval_20250718_182054.json  eval_20250718_182330.json  eval_20250718_183024.json  eval_20250718_183552.json  eval_20250718_183610.json  eval_20250718_183855.json  eval_20250718_183925.json  eval_20250718_184050.json  eval_20250718_184147.json  eval_20250718_184335.json  eval_20250718_184420.json  eval_20250718_184513.json  eval_20250718_184539.json  eval_20250718_184746.json  eval_20250718_185141.json  eval_20250718_185414.json  eval_20250718_185628.json  eval_20250718_185834.json  eval_20250718_185953.json  eval_20250718_190116.json  eval_20250718_190238.json  eval_20250718_190408.json  eval_20250718_190516.json  eval_20250718_190545.json  eval_20250718_190632.json  eval_20250718_191003.json  eval_20250718_191022.json  eval_20250718_191238.json  eval_20250718_191723.json  eval_20250718_191841.json  eval_20250718_192109.json  (+465 more)
hyperopt_results_block_ltho_temperature_mlp/: eval_20260406_185710.json  eval_20260406_190045.json  eval_20260406_190426.json  eval_20260406_190658.json  eval_20260406_191141.json  eval_20260406_191306.json  eval_20260406_191643.json  eval_20260406_191803.json  eval_20260406_191939.json  eval_20260406_192053.json  eval_20260406_192413.json  eval_20260406_192629.json  eval_20260406_192932.json  eval_20260406_193135.json  eval_20260406_193325.json  eval_20260406_193528.json  eval_20260406_193915.json  eval_20260406_194133.json  eval_20260406_194333.json  eval_20260406_194448.json  eval_20260406_194619.json  eval_20260406_194739.json  eval_20260406_194906.json  eval_20260406_195034.json  eval_20260406_195156.json  eval_20260406_195320.json  eval_20260406_195439.json  eval_20260406_195607.json  eval_20260406_195733.json  eval_20260406_195845.json  eval_20260406_200005.json  eval_20260406_200124.json  eval_20260406_200237.json  eval_20260406_200409.json  eval_20260406_200522.json  eval_20260406_200702.json  eval_20260406_201025.json  eval_20260406_201204.json  eval_20260406_201459.json  eval_20260406_201625.json  (+176 more)
hyperopt_results_block_ltho_wind_mlp/: eval_20260406_185632.json  eval_20260406_185824.json  eval_20260406_190203.json  eval_20260406_190329.json  eval_20260406_190540.json  eval_20260406_190732.json  eval_20260406_190909.json  eval_20260406_191042.json  eval_20260406_191441.json  eval_20260406_191750.json  eval_20260406_191927.json  eval_20260406_192337.json  eval_20260406_192715.json  eval_20260406_192944.json  eval_20260406_193138.json  eval_20260406_193301.json  eval_20260406_193634.json  eval_20260406_193809.json  eval_20260406_194132.json  eval_20260406_194541.json  (+182 more)
(+2330 files in other folders)
