[project]
name = "ai-weather-ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "cartopy>=0.24.1",
    "gcsfs>=2025.2.0",
    "h5netcdf>=1.5.0",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "numpy>=2.2.3",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "xarray>=2025.1.2",
    "zarr>=3.0.4",
]
