[project]
name = "ai-weather-ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
        "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "argparse",
    "attrs",
    "cachetools",
    "cartopy",
    "cdsapi",
    "certifi",
    "cftime",
    "charset-normalizer",
    "contourpy",
    "crc32c",
    "cycler",
    "decorator",
    "deprecated",
    "donfig",
    "ecmwf-datastores-client",
    "filelock",
    "fonttools",
    "frozenlist",
    "fsspec",
    "gcsfs",
    "google-api-core",
    "google-auth",
    "google-auth-oauthlib",
    "google-cloud-core",
    "google-cloud-storage",
    "google-crc32c",
    "google-resumable-media",
    "googleapis-common-protos",
    "h5netcdf",
    "h5py",
    "idna",
    "jinja2",
    "kiwisolver",
    "markupsafe",
    "matplotlib",
    "mpmath",
    "multidict",
    "multiurl",
    "netcdf4",
    "networkx",
    "numcodecs",
    "numpy",
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-cusparselt-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-nvtx-cu12",
    "oauthlib",
    "packaging",
    "pandas",
    "pillow",
    "propcache",
    "proto-plus",
    "protobuf",
    "pyasn1",
    "pyasn1-modules",
    "pyparsing",
    "pyproj",
    "pyshp",
    "python-dateutil",
    "pytz",
    "pyyaml",
    "requests",
    "requests-oauthlib",
    "rsa",
    "scipy",
    "shapely",
    "six",
    "sympy",
    "torch",
    "tqdm",
    "triton",
    "typing-extensions",
    "tzdata",
    "urllib3",
    "wrapt",
    "xarray",
    "yarl",
    "zarr",
]
