[project]
name = "ai-weather-ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
        "affine",
        "aiohappyeyeballs",
        "aiohttp",
        "aiosignal",
        "annotated-types",
        "argparse",
        "attrs",
        "aurora",
        "azure-core",
        "azure-storage-blob",
        "cachetools",
        "cartopy",
        "cdsapi",
        "certifi",
        "cffi",
        "cftime",
        "charset-normalizer",
        "click",
        "click-plugins",
        "cligj",
        "cloudpickle",
        "contourpy",
        "crc32c",
        "cryptography",
        "cycler",
        "dask",
        "decorator",
        "deprecated",
        "distributed",
        "donfig",
        "ecmwf-datastores-client",
        "einops",
        "filelock",
        "fonttools",
        "frozenlist",
        "fsspec",
        "gcsfs",
        "google-api-core",
        "google-auth",
        "google-auth-oauthlib",
        "google-cloud-core",
        "google-cloud-storage",
        "google-crc32c",
        "google-resumable-media",
        "googleapis-common-protos",
        "h5netcdf",
        "h5py",
        "hf-xet",
        "huggingface-hub",
        "hyperopt>=0.2.7",
        "idna",
        "importlib-metadata",
        "isodate",
        "jinja2",
        "kiwisolver",
        "llvmlite",
        "locket",
        "loguru",
        "lxml",
        "markupsafe",
        "matplotlib",
        "microsoft-aurora",
        "mpmath",
        "msgpack",
        "mt-metadata",
        "mth5",
        "multidict",
        "multiurl",
        "netcdf4",
        "networkx",
        "numba",
        "numcodecs",
        "numpy",
        "oauthlib",
        "obspy",
        "packaging",
        "pandas",
        "partd",
        "pillow",
        "propcache",
        "proto-plus",
        "protobuf",
        "psutil",
        "pyasn1",
        "pyasn1-modules",
        "pycparser",
        "pydantic",
        "pydantic-core",
        "pyparsing",
        "pyproj",
        "pyshp",
        "python-dateutil",
        "pytz",
        "pyyaml",
        "rasterio",
        "requests",
        "requests-oauthlib",
        "rsa",
        "safetensors",
        "scipy",
        "setuptools",
        "shapely",
        "six",
        "sortedcontainers",
        "sqlalchemy",
        "sympy",
        "tblib",
        "timm",
        "toolz",
        "torch",
        "torchvision",
        "xarray>2025",
        "zarr>3",
]

[project.optional-dependencies]
# CUDA dependencies for Linux GPU clusters only
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-cusparselt-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-nvtx-cu12",
    "triton",
]
